change list of documents variable names

--- a/MongoDB.ipynb
+++ b/MongoDB.ipynb
@@ -27,7 +27,7 @@
    "outputs": [],
    "source": [
     "fake = Faker() #initialize Faker object\n",
-    "customers = []\n",
+    "customers_doc = []\n",
     "pp = pprint.PrettyPrinter(indent=4)\n",
     "for i in range(1,25):\n",
     "    cus = {\n",
@@ -78,7 +78,7 @@
     "]\n",
     "\n",
     "# Create a list of dictionaries with product data\n",
-    "products = []\n",
+    "products_doc = []\n",
     "for i, (product_name, category, price) in enumerate(product_data, start=101):\n",
     "    prod = {\n",
     "        \"product_id\": i,\n",
@@ -102,7 +102,7 @@
     "# status categories\n",
     "status = [\"Delivered\", \"Pending\", \"Shipped\", \"In Transit\"]\n",
     "fake = Faker()\n",
-    "orders = []\n",
+    "orders_doc = []\n",
     "pp = pprint.PrettyPrinter(indent=4)\n",
     "for i in range(401,430):\n",
     "    cus = {\n",
@@ -125,7 +125,7 @@
    "outputs": [],
    "source": [
     "fake = Faker()\n",
-    "orders_items = []\n",
+    "orders_items_doc = []\n",
     "pp = pprint.PrettyPrinter(indent=4)\n",
     "for i in range(301,340):\n",
     "    cus = {\n",
@@ -169,10 +169,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "customers.insert_many(cus)\n",
-    "products.insert_many(prod)\n",
-    "orders.insert_many(orders)\n",
-    "orders_items.insert_many(orders_items)"
+    "customers.insert_many(customers_doc)\n",
+    "products.insert_many(products_doc)\n",
+    "orders.insert_many(orders_doc)\n",
+    "orders_items.insert_many(orders_items_doc)"
    ]
   },
   {
